sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:21: error: Unmatched closing brace '}' ignored here
}
^