sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var lgr:Int= getNombreValeurs()
  var v=getValeur(1:Int)
  var c:Int=0
  var fini:Boolean=false
  var j:Int=0
  for (i<-1 to lgr-1) {
    v=getValeur(i:Int)
    j=1
    while (i-j>=0 && v<getValeur(i-j)){
      setValeur((i-j+1):Int, getValeur(i-j:Int):Int)
      j=j+1
      }
    setValeur(c+1,v)
    }
  }
}